# mh-team3

./: .gitignore  Dockerfile-chat  Dockerfile.chat  Makefile  README.md  chat.env.example  docker-compose.prod.yml  docker-compose.yml  dotenv.example  pyproject.toml
api/: Dockerfile  README.md  pyproject.toml
api/quickpickup/: db.py  hooks.py  initialize.yml  order_ready.py
api/test/test_quickpickup/: test_api.py  test_api_db.py
app/chatbot/: __init__.py  webex_teams_bot.py
chat/: Dockerfile  README.md  pyproject.toml
chat/chatbot/: webex_teams_bot.py
chat/mocks/: client4.json  client5.json
chat/mocks/fixtures/: api_client1.json  api_client2.json  api_client3.json  api_client4.json  api_client6.json  api_client7.json  api_client8.json
mocks/: client1.json  client2.json  client3.json  client6.json  client7.json  client8.json
mocks/fixtures/: api_client5.json  api_client6.json
mvsensor/: Dockerfile  README.md  mvsensor.py  requirements.txt
quickpickup/: __main__.py  api.py  db.py  order_ready.py
test/test_quickpickup/: test_api.py  test_api_db.py
ui/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.tsx
ui/src/common/: data_types.ts  get_api_typed.ts  helpers.ts  post_api_typed.ts
ui/src/components/: ParkingSpot.tsx  ParkingSpotWrapper.tsx  SpotOrderUpdate.tsx  SpotOrderUpdateWrapper.tsx  Surround.tsx
