[tool.poetry]
name = "quickpick"
version = "1.0.0"
description = "Meraki Hackathon Python API"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
include = ["*.yml"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pymongo = "^3.10.1"
waitress = "^1.4.3"
requests = "^2.23.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
black = "^19.10b0"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
