[tool.poetry]
name = "chatbot"
version = "1.0.0"
description = "WebEx teams chat bot"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
webexteamssdk = "^1.3"
requests = "^2.23.0"
requests_mock = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
